Compilers (Fall 2020)/Test_Cases/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> classlist
Rule 2     classlist -> class SEMI
Rule 3     classlist -> class SEMI classlist
Rule 4     class -> CLASS type LBRACE featurelist RBRACE
Rule 5     class -> CLASS type INHERITS type LBRACE featurelist RBRACE
Rule 6     type -> TYPE
Rule 7     identifier -> IDENTIFIER
Rule 8     formallist -> formal COMMA formallist
Rule 9     formallist -> formal
Rule 10    formal -> identifier COLON type
Rule 11    featurelist -> <empty>
Rule 12    featurelist -> feature SEMI featurelist
Rule 13    feature -> attribute
Rule 14    attribute -> identifier COLON type
Rule 15    attribute -> identifier COLON type LARROW exp
Rule 16    feature -> identifier LPAREN formallist RPAREN COLON type LBRACE exp RBRACE
Rule 17    feature -> identifier LPAREN RPAREN COLON type LBRACE exp RBRACE
Rule 18    explist_semi -> exp SEMI
Rule 19    explist_semi -> exp SEMI explist_semi
Rule 20    explist_comma -> exp
Rule 21    explist_comma -> exp COMMA explist_comma
Rule 22    exp -> identifier LARROW exp
Rule 23    exp -> exp DOT identifier LPAREN explist_comma RPAREN
Rule 24    exp -> exp DOT identifier LPAREN RPAREN
Rule 25    exp -> exp AT type DOT identifier LPAREN explist_comma RPAREN
Rule 26    exp -> exp AT type DOT identifier LPAREN RPAREN
Rule 27    exp -> identifier LPAREN explist_comma RPAREN
Rule 28    exp -> identifier LPAREN RPAREN
Rule 29    exp -> IF exp THEN exp ELSE exp FI
Rule 30    exp -> WHILE exp LOOP exp POOL
Rule 31    exp -> LBRACE explist_semi RBRACE
Rule 32    exp -> NEW type
Rule 33    exp -> ISVOID exp
Rule 34    exp -> exp ADD exp
Rule 35    exp -> exp SUBTRACT exp
Rule 36    exp -> exp MULTIPLY exp
Rule 37    exp -> exp DIVIDE exp
Rule 38    exp -> exp LT exp
Rule 39    exp -> exp LE exp
Rule 40    exp -> exp EQUAL exp
Rule 41    exp -> NOT exp
Rule 42    exp -> TILDE exp
Rule 43    exp -> identifier
Rule 44    exp -> INTEGER
Rule 45    exp -> STRING
Rule 46    exp -> TRUE
Rule 47    exp -> FALSE
Rule 48    exp -> LET attribute attributelist IN exp
Rule 49    attributelist -> <empty>
Rule 50    attributelist -> COMMA attribute attributelist
Rule 51    exp -> CASE exp OF elementlist ESAC
Rule 52    element -> identifier COLON type RARROW exp
Rule 53    elementlist -> element SEMI
Rule 54    elementlist -> element SEMI elementlist

Terminals, with rules where they appear

ADD                  : 34
AT                   : 25 26
CASE                 : 51
CLASS                : 4 5
COLON                : 10 14 15 16 17 52
COMMA                : 8 21 50
DIVIDE               : 37
DOT                  : 23 24 25 26
ELSE                 : 29
EQUAL                : 40
ESAC                 : 51
FALSE                : 47
FI                   : 29
IDENTIFIER           : 7
IF                   : 29
IN                   : 48
INHERITS             : 5
INTEGER              : 44
ISVOID               : 33
LARROW               : 15 22
LBRACE               : 4 5 16 17 31
LE                   : 39
LET                  : 48
LOOP                 : 30
LPAREN               : 16 17 23 24 25 26 27 28
LT                   : 38
MULTIPLY             : 36
NEW                  : 32
NOT                  : 41
OF                   : 51
POOL                 : 30
RARROW               : 52
RBRACE               : 4 5 16 17 31
RPAREN               : 16 17 23 24 25 26 27 28
SEMI                 : 2 3 12 18 19 53 54
STRING               : 45
SUBTRACT             : 35
THEN                 : 29
TILDE                : 42
TRUE                 : 46
TYPE                 : 6
WHILE                : 30
error                : 

Nonterminals, with rules where they appear

attribute            : 13 48 50
attributelist        : 48 50
class                : 2 3
classlist            : 1 3
element              : 53 54
elementlist          : 51 54
exp                  : 15 16 17 18 19 20 21 22 23 24 25 26 29 29 29 30 30 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 42 48 51 52
explist_comma        : 21 23 25 27
explist_semi         : 19 31
feature              : 12
featurelist          : 4 5 12
formal               : 8 9
formallist           : 8 16
identifier           : 10 14 15 16 17 22 23 24 25 26 27 28 43 52
program              : 0
type                 : 4 5 5 10 14 15 16 17 25 26 32 52

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . classlist
    (2) classlist -> . class SEMI
    (3) classlist -> . class SEMI classlist
    (4) class -> . CLASS type LBRACE featurelist RBRACE
    (5) class -> . CLASS type INHERITS type LBRACE featurelist RBRACE

    CLASS           shift and go to state 4

    program                        shift and go to state 1
    classlist                      shift and go to state 2
    class                          shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> classlist .

    $end            reduce using rule 1 (program -> classlist .)


state 3

    (2) classlist -> class . SEMI
    (3) classlist -> class . SEMI classlist

    SEMI            shift and go to state 5


state 4

    (4) class -> CLASS . type LBRACE featurelist RBRACE
    (5) class -> CLASS . type INHERITS type LBRACE featurelist RBRACE
    (6) type -> . TYPE

    TYPE            shift and go to state 7

    type                           shift and go to state 6

state 5

    (2) classlist -> class SEMI .
    (3) classlist -> class SEMI . classlist
    (2) classlist -> . class SEMI
    (3) classlist -> . class SEMI classlist
    (4) class -> . CLASS type LBRACE featurelist RBRACE
    (5) class -> . CLASS type INHERITS type LBRACE featurelist RBRACE

    $end            reduce using rule 2 (classlist -> class SEMI .)
    CLASS           shift and go to state 4

    class                          shift and go to state 3
    classlist                      shift and go to state 8

state 6

    (4) class -> CLASS type . LBRACE featurelist RBRACE
    (5) class -> CLASS type . INHERITS type LBRACE featurelist RBRACE

    LBRACE          shift and go to state 9
    INHERITS        shift and go to state 10


state 7

    (6) type -> TYPE .

    LBRACE          reduce using rule 6 (type -> TYPE .)
    INHERITS        reduce using rule 6 (type -> TYPE .)
    LARROW          reduce using rule 6 (type -> TYPE .)
    SEMI            reduce using rule 6 (type -> TYPE .)
    COMMA           reduce using rule 6 (type -> TYPE .)
    IN              reduce using rule 6 (type -> TYPE .)
    RPAREN          reduce using rule 6 (type -> TYPE .)
    DOT             reduce using rule 6 (type -> TYPE .)
    AT              reduce using rule 6 (type -> TYPE .)
    ADD             reduce using rule 6 (type -> TYPE .)
    SUBTRACT        reduce using rule 6 (type -> TYPE .)
    MULTIPLY        reduce using rule 6 (type -> TYPE .)
    DIVIDE          reduce using rule 6 (type -> TYPE .)
    LT              reduce using rule 6 (type -> TYPE .)
    LE              reduce using rule 6 (type -> TYPE .)
    EQUAL           reduce using rule 6 (type -> TYPE .)
    THEN            reduce using rule 6 (type -> TYPE .)
    LOOP            reduce using rule 6 (type -> TYPE .)
    OF              reduce using rule 6 (type -> TYPE .)
    RBRACE          reduce using rule 6 (type -> TYPE .)
    ELSE            reduce using rule 6 (type -> TYPE .)
    POOL            reduce using rule 6 (type -> TYPE .)
    FI              reduce using rule 6 (type -> TYPE .)
    RARROW          reduce using rule 6 (type -> TYPE .)


state 8

    (3) classlist -> class SEMI classlist .

    $end            reduce using rule 3 (classlist -> class SEMI classlist .)


state 9

    (4) class -> CLASS type LBRACE . featurelist RBRACE
    (11) featurelist -> .
    (12) featurelist -> . feature SEMI featurelist
    (13) feature -> . attribute
    (16) feature -> . identifier LPAREN formallist RPAREN COLON type LBRACE exp RBRACE
    (17) feature -> . identifier LPAREN RPAREN COLON type LBRACE exp RBRACE
    (14) attribute -> . identifier COLON type
    (15) attribute -> . identifier COLON type LARROW exp
    (7) identifier -> . IDENTIFIER

    RBRACE          reduce using rule 11 (featurelist -> .)
    IDENTIFIER      shift and go to state 15

    featurelist                    shift and go to state 11
    feature                        shift and go to state 12
    attribute                      shift and go to state 13
    identifier                     shift and go to state 14

state 10

    (5) class -> CLASS type INHERITS . type LBRACE featurelist RBRACE
    (6) type -> . TYPE

    TYPE            shift and go to state 7

    type                           shift and go to state 16

state 11

    (4) class -> CLASS type LBRACE featurelist . RBRACE

    RBRACE          shift and go to state 17


state 12

    (12) featurelist -> feature . SEMI featurelist

    SEMI            shift and go to state 18


state 13

    (13) feature -> attribute .

    SEMI            reduce using rule 13 (feature -> attribute .)


state 14

    (16) feature -> identifier . LPAREN formallist RPAREN COLON type LBRACE exp RBRACE
    (17) feature -> identifier . LPAREN RPAREN COLON type LBRACE exp RBRACE
    (14) attribute -> identifier . COLON type
    (15) attribute -> identifier . COLON type LARROW exp

    LPAREN          shift and go to state 19
    COLON           shift and go to state 20


state 15

    (7) identifier -> IDENTIFIER .

    LPAREN          reduce using rule 7 (identifier -> IDENTIFIER .)
    COLON           reduce using rule 7 (identifier -> IDENTIFIER .)
    LARROW          reduce using rule 7 (identifier -> IDENTIFIER .)
    DOT             reduce using rule 7 (identifier -> IDENTIFIER .)
    AT              reduce using rule 7 (identifier -> IDENTIFIER .)
    ADD             reduce using rule 7 (identifier -> IDENTIFIER .)
    SUBTRACT        reduce using rule 7 (identifier -> IDENTIFIER .)
    MULTIPLY        reduce using rule 7 (identifier -> IDENTIFIER .)
    DIVIDE          reduce using rule 7 (identifier -> IDENTIFIER .)
    LT              reduce using rule 7 (identifier -> IDENTIFIER .)
    LE              reduce using rule 7 (identifier -> IDENTIFIER .)
    EQUAL           reduce using rule 7 (identifier -> IDENTIFIER .)
    SEMI            reduce using rule 7 (identifier -> IDENTIFIER .)
    COMMA           reduce using rule 7 (identifier -> IDENTIFIER .)
    IN              reduce using rule 7 (identifier -> IDENTIFIER .)
    THEN            reduce using rule 7 (identifier -> IDENTIFIER .)
    LOOP            reduce using rule 7 (identifier -> IDENTIFIER .)
    OF              reduce using rule 7 (identifier -> IDENTIFIER .)
    RBRACE          reduce using rule 7 (identifier -> IDENTIFIER .)
    RPAREN          reduce using rule 7 (identifier -> IDENTIFIER .)
    ELSE            reduce using rule 7 (identifier -> IDENTIFIER .)
    POOL            reduce using rule 7 (identifier -> IDENTIFIER .)
    FI              reduce using rule 7 (identifier -> IDENTIFIER .)


state 16

    (5) class -> CLASS type INHERITS type . LBRACE featurelist RBRACE

    LBRACE          shift and go to state 21


state 17

    (4) class -> CLASS type LBRACE featurelist RBRACE .

    SEMI            reduce using rule 4 (class -> CLASS type LBRACE featurelist RBRACE .)


state 18

    (12) featurelist -> feature SEMI . featurelist
    (11) featurelist -> .
    (12) featurelist -> . feature SEMI featurelist
    (13) feature -> . attribute
    (16) feature -> . identifier LPAREN formallist RPAREN COLON type LBRACE exp RBRACE
    (17) feature -> . identifier LPAREN RPAREN COLON type LBRACE exp RBRACE
    (14) attribute -> . identifier COLON type
    (15) attribute -> . identifier COLON type LARROW exp
    (7) identifier -> . IDENTIFIER

    RBRACE          reduce using rule 11 (featurelist -> .)
    IDENTIFIER      shift and go to state 15

    feature                        shift and go to state 12
    featurelist                    shift and go to state 22
    attribute                      shift and go to state 13
    identifier                     shift and go to state 14

state 19

    (16) feature -> identifier LPAREN . formallist RPAREN COLON type LBRACE exp RBRACE
    (17) feature -> identifier LPAREN . RPAREN COLON type LBRACE exp RBRACE
    (8) formallist -> . formal COMMA formallist
    (9) formallist -> . formal
    (10) formal -> . identifier COLON type
    (7) identifier -> . IDENTIFIER

    RPAREN          shift and go to state 25
    IDENTIFIER      shift and go to state 15

    identifier                     shift and go to state 23
    formallist                     shift and go to state 24
    formal                         shift and go to state 26

state 20

    (14) attribute -> identifier COLON . type
    (15) attribute -> identifier COLON . type LARROW exp
    (6) type -> . TYPE

    TYPE            shift and go to state 7

    type                           shift and go to state 27

state 21

    (5) class -> CLASS type INHERITS type LBRACE . featurelist RBRACE
    (11) featurelist -> .
    (12) featurelist -> . feature SEMI featurelist
    (13) feature -> . attribute
    (16) feature -> . identifier LPAREN formallist RPAREN COLON type LBRACE exp RBRACE
    (17) feature -> . identifier LPAREN RPAREN COLON type LBRACE exp RBRACE
    (14) attribute -> . identifier COLON type
    (15) attribute -> . identifier COLON type LARROW exp
    (7) identifier -> . IDENTIFIER

    RBRACE          reduce using rule 11 (featurelist -> .)
    IDENTIFIER      shift and go to state 15

    featurelist                    shift and go to state 28
    feature                        shift and go to state 12
    attribute                      shift and go to state 13
    identifier                     shift and go to state 14

state 22

    (12) featurelist -> feature SEMI featurelist .

    RBRACE          reduce using rule 12 (featurelist -> feature SEMI featurelist .)


state 23

    (10) formal -> identifier . COLON type

    COLON           shift and go to state 29


state 24

    (16) feature -> identifier LPAREN formallist . RPAREN COLON type LBRACE exp RBRACE

    RPAREN          shift and go to state 30


state 25

    (17) feature -> identifier LPAREN RPAREN . COLON type LBRACE exp RBRACE

    COLON           shift and go to state 31


state 26

    (8) formallist -> formal . COMMA formallist
    (9) formallist -> formal .

    COMMA           shift and go to state 32
    RPAREN          reduce using rule 9 (formallist -> formal .)


state 27

    (14) attribute -> identifier COLON type .
    (15) attribute -> identifier COLON type . LARROW exp

    SEMI            reduce using rule 14 (attribute -> identifier COLON type .)
    COMMA           reduce using rule 14 (attribute -> identifier COLON type .)
    IN              reduce using rule 14 (attribute -> identifier COLON type .)
    LARROW          shift and go to state 33


state 28

    (5) class -> CLASS type INHERITS type LBRACE featurelist . RBRACE

    RBRACE          shift and go to state 34


state 29

    (10) formal -> identifier COLON . type
    (6) type -> . TYPE

    TYPE            shift and go to state 7

    type                           shift and go to state 35

state 30

    (16) feature -> identifier LPAREN formallist RPAREN . COLON type LBRACE exp RBRACE

    COLON           shift and go to state 36


state 31

    (17) feature -> identifier LPAREN RPAREN COLON . type LBRACE exp RBRACE
    (6) type -> . TYPE

    TYPE            shift and go to state 7

    type                           shift and go to state 37

state 32

    (8) formallist -> formal COMMA . formallist
    (8) formallist -> . formal COMMA formallist
    (9) formallist -> . formal
    (10) formal -> . identifier COLON type
    (7) identifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 15

    formal                         shift and go to state 26
    formallist                     shift and go to state 38
    identifier                     shift and go to state 23

state 33

    (15) attribute -> identifier COLON type LARROW . exp
    (22) exp -> . identifier LARROW exp
    (23) exp -> . exp DOT identifier LPAREN explist_comma RPAREN
    (24) exp -> . exp DOT identifier LPAREN RPAREN
    (25) exp -> . exp AT type DOT identifier LPAREN explist_comma RPAREN
    (26) exp -> . exp AT type DOT identifier LPAREN RPAREN
    (27) exp -> . identifier LPAREN explist_comma RPAREN
    (28) exp -> . identifier LPAREN RPAREN
    (29) exp -> . IF exp THEN exp ELSE exp FI
    (30) exp -> . WHILE exp LOOP exp POOL
    (31) exp -> . LBRACE explist_semi RBRACE
    (32) exp -> . NEW type
    (33) exp -> . ISVOID exp
    (34) exp -> . exp ADD exp
    (35) exp -> . exp SUBTRACT exp
    (36) exp -> . exp MULTIPLY exp
    (37) exp -> . exp DIVIDE exp
    (38) exp -> . exp LT exp
    (39) exp -> . exp LE exp
    (40) exp -> . exp EQUAL exp
    (41) exp -> . NOT exp
    (42) exp -> . TILDE exp
    (43) exp -> . identifier
    (44) exp -> . INTEGER
    (45) exp -> . STRING
    (46) exp -> . TRUE
    (47) exp -> . FALSE
    (48) exp -> . LET attribute attributelist IN exp
    (51) exp -> . CASE exp OF elementlist ESAC
    (7) identifier -> . IDENTIFIER

    IF              shift and go to state 41
    WHILE           shift and go to state 42
    LBRACE          shift and go to state 43
    NEW             shift and go to state 44
    ISVOID          shift and go to state 45
    NOT             shift and go to state 46
    TILDE           shift and go to state 47
    INTEGER         shift and go to state 48
    STRING          shift and go to state 49
    TRUE            shift and go to state 50
    FALSE           shift and go to state 51
    LET             shift and go to state 52
    CASE            shift and go to state 53
    IDENTIFIER      shift and go to state 15

    identifier                     shift and go to state 39
    exp                            shift and go to state 40

state 34

    (5) class -> CLASS type INHERITS type LBRACE featurelist RBRACE .

    SEMI            reduce using rule 5 (class -> CLASS type INHERITS type LBRACE featurelist RBRACE .)


state 35

    (10) formal -> identifier COLON type .

    COMMA           reduce using rule 10 (formal -> identifier COLON type .)
    RPAREN          reduce using rule 10 (formal -> identifier COLON type .)


state 36

    (16) feature -> identifier LPAREN formallist RPAREN COLON . type LBRACE exp RBRACE
    (6) type -> . TYPE

    TYPE            shift and go to state 7

    type                           shift and go to state 54

state 37

    (17) feature -> identifier LPAREN RPAREN COLON type . LBRACE exp RBRACE

    LBRACE          shift and go to state 55


state 38

    (8) formallist -> formal COMMA formallist .

    RPAREN          reduce using rule 8 (formallist -> formal COMMA formallist .)


state 39

    (22) exp -> identifier . LARROW exp
    (27) exp -> identifier . LPAREN explist_comma RPAREN
    (28) exp -> identifier . LPAREN RPAREN
    (43) exp -> identifier .

    LARROW          shift and go to state 56
    LPAREN          shift and go to state 57
    DOT             reduce using rule 43 (exp -> identifier .)
    AT              reduce using rule 43 (exp -> identifier .)
    ADD             reduce using rule 43 (exp -> identifier .)
    SUBTRACT        reduce using rule 43 (exp -> identifier .)
    MULTIPLY        reduce using rule 43 (exp -> identifier .)
    DIVIDE          reduce using rule 43 (exp -> identifier .)
    LT              reduce using rule 43 (exp -> identifier .)
    LE              reduce using rule 43 (exp -> identifier .)
    EQUAL           reduce using rule 43 (exp -> identifier .)
    SEMI            reduce using rule 43 (exp -> identifier .)
    COMMA           reduce using rule 43 (exp -> identifier .)
    IN              reduce using rule 43 (exp -> identifier .)
    THEN            reduce using rule 43 (exp -> identifier .)
    LOOP            reduce using rule 43 (exp -> identifier .)
    OF              reduce using rule 43 (exp -> identifier .)
    RBRACE          reduce using rule 43 (exp -> identifier .)
    RPAREN          reduce using rule 43 (exp -> identifier .)
    ELSE            reduce using rule 43 (exp -> identifier .)
    POOL            reduce using rule 43 (exp -> identifier .)
    FI              reduce using rule 43 (exp -> identifier .)


state 40

    (15) attribute -> identifier COLON type LARROW exp .
    (23) exp -> exp . DOT identifier LPAREN explist_comma RPAREN
    (24) exp -> exp . DOT identifier LPAREN RPAREN
    (25) exp -> exp . AT type DOT identifier LPAREN explist_comma RPAREN
    (26) exp -> exp . AT type DOT identifier LPAREN RPAREN
    (34) exp -> exp . ADD exp
    (35) exp -> exp . SUBTRACT exp
    (36) exp -> exp . MULTIPLY exp
    (37) exp -> exp . DIVIDE exp
    (38) exp -> exp . LT exp
    (39) exp -> exp . LE exp
    (40) exp -> exp . EQUAL exp

    SEMI            reduce using rule 15 (attribute -> identifier COLON type LARROW exp .)
    COMMA           reduce using rule 15 (attribute -> identifier COLON type LARROW exp .)
    IN              reduce using rule 15 (attribute -> identifier COLON type LARROW exp .)
    DOT             shift and go to state 58
    AT              shift and go to state 59
    ADD             shift and go to state 60
    SUBTRACT        shift and go to state 61
    MULTIPLY        shift and go to state 62
    DIVIDE          shift and go to state 63
    LT              shift and go to state 64
    LE              shift and go to state 65
    EQUAL           shift and go to state 66


state 41

    (29) exp -> IF . exp THEN exp ELSE exp FI
    (22) exp -> . identifier LARROW exp
    (23) exp -> . exp DOT identifier LPAREN explist_comma RPAREN
    (24) exp -> . exp DOT identifier LPAREN RPAREN
    (25) exp -> . exp AT type DOT identifier LPAREN explist_comma RPAREN
    (26) exp -> . exp AT type DOT identifier LPAREN RPAREN
    (27) exp -> . identifier LPAREN explist_comma RPAREN
    (28) exp -> . identifier LPAREN RPAREN
    (29) exp -> . IF exp THEN exp ELSE exp FI
    (30) exp -> . WHILE exp LOOP exp POOL
    (31) exp -> . LBRACE explist_semi RBRACE
    (32) exp -> . NEW type
    (33) exp -> . ISVOID exp
    (34) exp -> . exp ADD exp
    (35) exp -> . exp SUBTRACT exp
    (36) exp -> . exp MULTIPLY exp
    (37) exp -> . exp DIVIDE exp
    (38) exp -> . exp LT exp
    (39) exp -> . exp LE exp
    (40) exp -> . exp EQUAL exp
    (41) exp -> . NOT exp
    (42) exp -> . TILDE exp
    (43) exp -> . identifier
    (44) exp -> . INTEGER
    (45) exp -> . STRING
    (46) exp -> . TRUE
    (47) exp -> . FALSE
    (48) exp -> . LET attribute attributelist IN exp
    (51) exp -> . CASE exp OF elementlist ESAC
    (7) identifier -> . IDENTIFIER

    IF              shift and go to state 41
    WHILE           shift and go to state 42
    LBRACE          shift and go to state 43
    NEW             shift and go to state 44
    ISVOID          shift and go to state 45
    NOT             shift and go to state 46
    TILDE           shift and go to state 47
    INTEGER         shift and go to state 48
    STRING          shift and go to state 49
    TRUE            shift and go to state 50
    FALSE           shift and go to state 51
    LET             shift and go to state 52
    CASE            shift and go to state 53
    IDENTIFIER      shift and go to state 15

    exp                            shift and go to state 67
    identifier                     shift and go to state 39

state 42

    (30) exp -> WHILE . exp LOOP exp POOL
    (22) exp -> . identifier LARROW exp
    (23) exp -> . exp DOT identifier LPAREN explist_comma RPAREN
    (24) exp -> . exp DOT identifier LPAREN RPAREN
    (25) exp -> . exp AT type DOT identifier LPAREN explist_comma RPAREN
    (26) exp -> . exp AT type DOT identifier LPAREN RPAREN
    (27) exp -> . identifier LPAREN explist_comma RPAREN
    (28) exp -> . identifier LPAREN RPAREN
    (29) exp -> . IF exp THEN exp ELSE exp FI
    (30) exp -> . WHILE exp LOOP exp POOL
    (31) exp -> . LBRACE explist_semi RBRACE
    (32) exp -> . NEW type
    (33) exp -> . ISVOID exp
    (34) exp -> . exp ADD exp
    (35) exp -> . exp SUBTRACT exp
    (36) exp -> . exp MULTIPLY exp
    (37) exp -> . exp DIVIDE exp
    (38) exp -> . exp LT exp
    (39) exp -> . exp LE exp
    (40) exp -> . exp EQUAL exp
    (41) exp -> . NOT exp
    (42) exp -> . TILDE exp
    (43) exp -> . identifier
    (44) exp -> . INTEGER
    (45) exp -> . STRING
    (46) exp -> . TRUE
    (47) exp -> . FALSE
    (48) exp -> . LET attribute attributelist IN exp
    (51) exp -> . CASE exp OF elementlist ESAC
    (7) identifier -> . IDENTIFIER

    IF              shift and go to state 41
    WHILE           shift and go to state 42
    LBRACE          shift and go to state 43
    NEW             shift and go to state 44
    ISVOID          shift and go to state 45
    NOT             shift and go to state 46
    TILDE           shift and go to state 47
    INTEGER         shift and go to state 48
    STRING          shift and go to state 49
    TRUE            shift and go to state 50
    FALSE           shift and go to state 51
    LET             shift and go to state 52
    CASE            shift and go to state 53
    IDENTIFIER      shift and go to state 15

    exp                            shift and go to state 68
    identifier                     shift and go to state 39

state 43

    (31) exp -> LBRACE . explist_semi RBRACE
    (18) explist_semi -> . exp SEMI
    (19) explist_semi -> . exp SEMI explist_semi
    (22) exp -> . identifier LARROW exp
    (23) exp -> . exp DOT identifier LPAREN explist_comma RPAREN
    (24) exp -> . exp DOT identifier LPAREN RPAREN
    (25) exp -> . exp AT type DOT identifier LPAREN explist_comma RPAREN
    (26) exp -> . exp AT type DOT identifier LPAREN RPAREN
    (27) exp -> . identifier LPAREN explist_comma RPAREN
    (28) exp -> . identifier LPAREN RPAREN
    (29) exp -> . IF exp THEN exp ELSE exp FI
    (30) exp -> . WHILE exp LOOP exp POOL
    (31) exp -> . LBRACE explist_semi RBRACE
    (32) exp -> . NEW type
    (33) exp -> . ISVOID exp
    (34) exp -> . exp ADD exp
    (35) exp -> . exp SUBTRACT exp
    (36) exp -> . exp MULTIPLY exp
    (37) exp -> . exp DIVIDE exp
    (38) exp -> . exp LT exp
    (39) exp -> . exp LE exp
    (40) exp -> . exp EQUAL exp
    (41) exp -> . NOT exp
    (42) exp -> . TILDE exp
    (43) exp -> . identifier
    (44) exp -> . INTEGER
    (45) exp -> . STRING
    (46) exp -> . TRUE
    (47) exp -> . FALSE
    (48) exp -> . LET attribute attributelist IN exp
    (51) exp -> . CASE exp OF elementlist ESAC
    (7) identifier -> . IDENTIFIER

    IF              shift and go to state 41
    WHILE           shift and go to state 42
    LBRACE          shift and go to state 43
    NEW             shift and go to state 44
    ISVOID          shift and go to state 45
    NOT             shift and go to state 46
    TILDE           shift and go to state 47
    INTEGER         shift and go to state 48
    STRING          shift and go to state 49
    TRUE            shift and go to state 50
    FALSE           shift and go to state 51
    LET             shift and go to state 52
    CASE            shift and go to state 53
    IDENTIFIER      shift and go to state 15

    explist_semi                   shift and go to state 69
    exp                            shift and go to state 70
    identifier                     shift and go to state 39

state 44

    (32) exp -> NEW . type
    (6) type -> . TYPE

    TYPE            shift and go to state 7

    type                           shift and go to state 71

state 45

    (33) exp -> ISVOID . exp
    (22) exp -> . identifier LARROW exp
    (23) exp -> . exp DOT identifier LPAREN explist_comma RPAREN
    (24) exp -> . exp DOT identifier LPAREN RPAREN
    (25) exp -> . exp AT type DOT identifier LPAREN explist_comma RPAREN
    (26) exp -> . exp AT type DOT identifier LPAREN RPAREN
    (27) exp -> . identifier LPAREN explist_comma RPAREN
    (28) exp -> . identifier LPAREN RPAREN
    (29) exp -> . IF exp THEN exp ELSE exp FI
    (30) exp -> . WHILE exp LOOP exp POOL
    (31) exp -> . LBRACE explist_semi RBRACE
    (32) exp -> . NEW type
    (33) exp -> . ISVOID exp
    (34) exp -> . exp ADD exp
    (35) exp -> . exp SUBTRACT exp
    (36) exp -> . exp MULTIPLY exp
    (37) exp -> . exp DIVIDE exp
    (38) exp -> . exp LT exp
    (39) exp -> . exp LE exp
    (40) exp -> . exp EQUAL exp
    (41) exp -> . NOT exp
    (42) exp -> . TILDE exp
    (43) exp -> . identifier
    (44) exp -> . INTEGER
    (45) exp -> . STRING
    (46) exp -> . TRUE
    (47) exp -> . FALSE
    (48) exp -> . LET attribute attributelist IN exp
    (51) exp -> . CASE exp OF elementlist ESAC
    (7) identifier -> . IDENTIFIER

    IF              shift and go to state 41
    WHILE           shift and go to state 42
    LBRACE          shift and go to state 43
    NEW             shift and go to state 44
    ISVOID          shift and go to state 45
    NOT             shift and go to state 46
    TILDE           shift and go to state 47
    INTEGER         shift and go to state 48
    STRING          shift and go to state 49
    TRUE            shift and go to state 50
    FALSE           shift and go to state 51
    LET             shift and go to state 52
    CASE            shift and go to state 53
    IDENTIFIER      shift and go to state 15

    exp                            shift and go to state 72
    identifier                     shift and go to state 39

state 46

    (41) exp -> NOT . exp
    (22) exp -> . identifier LARROW exp
    (23) exp -> . exp DOT identifier LPAREN explist_comma RPAREN
    (24) exp -> . exp DOT identifier LPAREN RPAREN
    (25) exp -> . exp AT type DOT identifier LPAREN explist_comma RPAREN
    (26) exp -> . exp AT type DOT identifier LPAREN RPAREN
    (27) exp -> . identifier LPAREN explist_comma RPAREN
    (28) exp -> . identifier LPAREN RPAREN
    (29) exp -> . IF exp THEN exp ELSE exp FI
    (30) exp -> . WHILE exp LOOP exp POOL
    (31) exp -> . LBRACE explist_semi RBRACE
    (32) exp -> . NEW type
    (33) exp -> . ISVOID exp
    (34) exp -> . exp ADD exp
    (35) exp -> . exp SUBTRACT exp
    (36) exp -> . exp MULTIPLY exp
    (37) exp -> . exp DIVIDE exp
    (38) exp -> . exp LT exp
    (39) exp -> . exp LE exp
    (40) exp -> . exp EQUAL exp
    (41) exp -> . NOT exp
    (42) exp -> . TILDE exp
    (43) exp -> . identifier
    (44) exp -> . INTEGER
    (45) exp -> . STRING
    (46) exp -> . TRUE
    (47) exp -> . FALSE
    (48) exp -> . LET attribute attributelist IN exp
    (51) exp -> . CASE exp OF elementlist ESAC
    (7) identifier -> . IDENTIFIER

    IF              shift and go to state 41
    WHILE           shift and go to state 42
    LBRACE          shift and go to state 43
    NEW             shift and go to state 44
    ISVOID          shift and go to state 45
    NOT             shift and go to state 46
    TILDE           shift and go to state 47
    INTEGER         shift and go to state 48
    STRING          shift and go to state 49
    TRUE            shift and go to state 50
    FALSE           shift and go to state 51
    LET             shift and go to state 52
    CASE            shift and go to state 53
    IDENTIFIER      shift and go to state 15

    exp                            shift and go to state 73
    identifier                     shift and go to state 39

state 47

    (42) exp -> TILDE . exp
    (22) exp -> . identifier LARROW exp
    (23) exp -> . exp DOT identifier LPAREN explist_comma RPAREN
    (24) exp -> . exp DOT identifier LPAREN RPAREN
    (25) exp -> . exp AT type DOT identifier LPAREN explist_comma RPAREN
    (26) exp -> . exp AT type DOT identifier LPAREN RPAREN
    (27) exp -> . identifier LPAREN explist_comma RPAREN
    (28) exp -> . identifier LPAREN RPAREN
    (29) exp -> . IF exp THEN exp ELSE exp FI
    (30) exp -> . WHILE exp LOOP exp POOL
    (31) exp -> . LBRACE explist_semi RBRACE
    (32) exp -> . NEW type
    (33) exp -> . ISVOID exp
    (34) exp -> . exp ADD exp
    (35) exp -> . exp SUBTRACT exp
    (36) exp -> . exp MULTIPLY exp
    (37) exp -> . exp DIVIDE exp
    (38) exp -> . exp LT exp
    (39) exp -> . exp LE exp
    (40) exp -> . exp EQUAL exp
    (41) exp -> . NOT exp
    (42) exp -> . TILDE exp
    (43) exp -> . identifier
    (44) exp -> . INTEGER
    (45) exp -> . STRING
    (46) exp -> . TRUE
    (47) exp -> . FALSE
    (48) exp -> . LET attribute attributelist IN exp
    (51) exp -> . CASE exp OF elementlist ESAC
    (7) identifier -> . IDENTIFIER

    IF              shift and go to state 41
    WHILE           shift and go to state 42
    LBRACE          shift and go to state 43
    NEW             shift and go to state 44
    ISVOID          shift and go to state 45
    NOT             shift and go to state 46
    TILDE           shift and go to state 47
    INTEGER         shift and go to state 48
    STRING          shift and go to state 49
    TRUE            shift and go to state 50
    FALSE           shift and go to state 51
    LET             shift and go to state 52
    CASE            shift and go to state 53
